--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,11 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+rtnetlink = "0.7.0"
+anyhow = "1.0.32"
+futures = "0.3.5"
+mac_address = "1.1.1"
+
+[dependencies.tokio]
+version = "1.4.0"
+features =  ["full"]
